--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samarbejde</title>
 </head>
+
 <body>
-    
+    <h1>Vores Hjemmeside</h1>
+    <section id="red">
+        <article id="orange">
+            <section id="gul">
+                <article id="green">
+                    <section id="blue">
+                        <article id="purple">
+
+                        </article>
+                    </section>
+                </article>
+            </section>
+        </article>
+    </section>
 </body>
 </html>
